ros2_ws/log/build_2024-11-19_19-49-24/robot_catch_pkg/stderr.log
  File "/home/ubuntu/TomTarget/ros2_ws/install/robot_catch_pkg/lib/python3.10/site-packages/robot_catch_pkg/robot_catch_node.py", line 129
    os.system(f”mpg123 -o alsa {self.music_file}”)
               ^
SyntaxError: invalid character '”' (U+201D)

